--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - images/login_icon/qq.png
+    - images/login_icon/wx.png
+    - images/login_icon/wb.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
